--- a/Dokumentacija/ProjekatDokumentacija.tex
+++ b/Dokumentacija/ProjekatDokumentacija.tex
@@ -159,7 +159,7 @@
 		\end{minipage}\\[0.7 cm]
 		
 		\begin{center}
-			{\large Sarajevo, 05.11.2017.}\\[1cm] 
+			{\large Sarajevo, 08.01.2018.}\\[1cm] 
 		\end{center}
 		\normalsize
 		
@@ -324,6 +324,176 @@ Osnovne komponente Android aplikacije su:
 
 Izgled naslovne stranice prikazan je na sljedećoj slici:
 
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a1.png}
+	\end{center}
+	\caption{Naslovna stranica}
+\end{figure}
+
+Omogućeno je kreiranje vlastitog računa, klikom na dugme za registraciju.
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a2.png}
+	\end{center}
+	\caption{Registracija}
+\end{figure}
+
+Nakon prijave, otvara se stranica pomoću koje se uspostavlja konekcija na bazu nakon unosa odgovarajućih podataka.
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a3.png}
+	\end{center}
+	\caption{Stranica za unos konekcijskih podataka}
+\end{figure}
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a4.png}
+	\end{center}
+	\caption{Uspostavljanje konekcije na bazu}
+\end{figure}
+
+\newpage
+Nakon ostvarivanja konekcije na bazu korisniku su prikazani objekti baze.
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a5.png}
+	\end{center}
+	\caption{Objekti baze a}
+\end{figure}
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a6.png}
+	\end{center}
+	\caption{Objekti baze b}
+\end{figure}
+
+\newpage
+
+Za tabele su ponuđene opcije: pregleda svih tabela, kreiranja nove tabele i kreiranje ERD-a, kojeg je moguće preuzeti kao sliku. U nastavku slijedi prikaz slika datih opcija.
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a18.png}
+	\end{center}
+	\caption{Kreiranje tabele}
+\end{figure}
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a20.png}
+	\end{center}
+	\caption{Crtanje ERD-a}
+\end{figure}
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a21.png}
+	\end{center}
+	\caption{Preuzeta slika ERD-a}
+\end{figure}
+
+
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a7.png}
+	\end{center}
+	\caption{Tabele baze}
+\end{figure}
+\newpage
+U sklopu prikaza tabela baze, moguće je kreiranje indeksa na svakoj tabeli i prikaz detalja iste.
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a15.png}
+	\end{center}
+	\caption{Kreiranje indeksa}
+\end{figure}
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a8.png}
+	\end{center}
+	\caption{Detalji tabele}
+\end{figure}
+
+\newpage
+Za triggere su ponuđene opcije: pregled svih triggera, kreiranje novog triggera.
+
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a16.png}
+	\end{center}
+	\caption{Kreiranje triggera a}
+\end{figure}
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a16.png}
+	\end{center}
+	\caption{Kreiranje triggera b}
+\end{figure}
+\newpage
+U sklopu prikaza triggera baze, moguć je prikaz detalja odabranog triggera.
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a9.png}
+	\end{center}
+	\caption{Prikaz svih triggera}
+\end{figure}
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a10.png}
+	\end{center}
+	\caption{Detalji odabranog triggera}
+\end{figure}
+
+\newpage
+Za pogled su ponuđene opcije: pregled svih pogleda, kreiranje novog pogleda.
+
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a19.png}
+	\end{center}
+	\caption{Kreiranje pogleda }
+\end{figure}
+U sklopu prikaza pogleda baze, moguć je prikaz detalja odabranog pogleda.
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a13.png}
+	\end{center}
+	\caption{Prikaz svih pogleda}
+\end{figure}
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a14.png}
+	\end{center}
+	\caption{Detalji pogleda}
+\end{figure}
+
+\newpage
+Za proceduru je ponuđena opcija pregled svih procedura.
+U sklopu prikaza procedura baze, moguć je prikaz detalja odabrane procedure.
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a11.png}
+	\end{center}
+	\caption{Prikaz svih procedura}
+\end{figure}
+
+\begin{figure}[H]
+	\begin{center} 
+		\includegraphics[width=0.9\textwidth]{a12.png}
+	\end{center}
+	\caption{Detalji procedure}
+\end{figure}
 
 \chapter{Android aplikacija}
 
